--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -8,7 +8,7 @@ secondary = #e60053
 alert = #bd2c40
 
 [bar/main]
-monitor = ${env:MONITOR:eDP-1}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 2.5%
 bottom = true
@@ -18,33 +18,55 @@ line-size = 2
 padding = 1
 module-margin = 1
 
-modules-left = date ewmh
-modules-center =
-modules-right = pulseaudio cpu memory battery temperature wlan
+modules-left = date i3
+modules-center = spotify
+modules-right = alsa cpu memory temperature wlan
 
 tray-position = right
 tray-padding = 2
 tray-maxsize = 24
 
-font-0 = "Cascadia Code:size=10;1"
-font-1 = "Unifont:size=10;1"
-font-2 = "Siji:size=10;1"
+font-0 = "CaskaydiaCove Nerd Font:size=10;1"
 
 [global/wm]
 margin-top = 0
 
-[module/ewmh]
-type = internal/xworkspaces
-label-active-underline = #fba922
+[module/spotify]
+type = custom/script
+interval = 1
+format-prefix = " "
+format = <label>
+exec = python3 ~/.config/polybar/spotify_status.py -f '{song} - {artist} - {album}'
+format-underline = #1db954
 
-[module/pulseaudio]
-type = internal/pulseaudio
+[module/i3]
+type = internal/i3
+
+index-sort = true
+enable-click = true
+
+ws-icon-0 = 1:web;
+ws-icon-1 = 2:code;
+ws-icon-2 = 3:spotify;
+ws-icon-default = 
+
+label-focused-underline = #fba922
+
+label-separator = |
+label-separator-padding = 1
+
+[module/alsa]
+type = internal/alsa
+
+master-soundcard = default
+speaker-soundcard = default
+headphone-soundcard = default
 
 format-volume = <label-volume> <bar-volume>
 label-volume = VOL %percentage%%
 
 label-muted = muted
-format-muted-prefix = " "
+format-muted-prefix = " "
 label-muted-foreground = #666
 
 bar-volume-width = 10
@@ -63,43 +85,6 @@ bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
 
-[module/battery]
-type = internal/battery
-
-full-at = 99
-
-battery = BAT0
-adapter = AC
-
-poll-interval = 5
-
-format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
-
-format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
-
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
-animation-charging-framerate = 750
-
-animation-discharging-0 = 
-animation-discharging-1 = 
-animation-discharging-2 = 
-animation-discharging-foreground = ${colors.foreground-alt}
-animation-discharging-framerate = 750
-
 [module/temperature]
 type = internal/temperature
 thermal-zone = 0
@@ -114,41 +99,41 @@ label = %temperature-c%
 label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
 ramp-foreground = ${colors.foreground-alt}
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " " 
+format-prefix = " " 
 format-underline = #f90000
 label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = " "
+format-prefix = " "
 format-underline = #4bffdc
 label = %percentage_used:2%%
 
 [module/wlan]
 type = internal/network
-interface = wlan0
+interface = enp3s0
 interval = 5.0
 
 format-connected = <ramp-signal> <label-connected>
 format-connected-underline = #9f78e1
-label-connected = %essid%
+label-connected = %local_ip% %downspeed:9%
 
 label-disconnected =
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
 
 [module/date]
 type = internal/date
