--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,9 +6,9 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      VictorMono Nerd Font, Medium
+font_family      Dank Mono Regular Nerd Font Mono
 # bold_font        auto
-# italic_font      auto
+italic_font      Dank Mono Italic Nerd Font Mono
 # bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
@@ -24,7 +24,7 @@ font_family      VictorMono Nerd Font, Medium
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 12.0
 
 #: Font size (in pts)
 
