--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
 set -ga terminal-overrides ",xterm-256color*:Tc"
 set -s escape-time 0
+set-option -g default-shell /bin/zsh
 
 unbind C-b
 set-option -g prefix C-a
