--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1037,33 +1037,76 @@ font_size 12.0
 #: to be used unchanged. Note that these colors can be overridden by
 #: the program running in the terminal.
 
-foreground #a9b1d6
-background #1a1b26
-cursor #a9b1d6
+# The basic colors
+foreground              #CDD6F4
+background              #1E1E2E
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
 
-color0 #1a1b26
-color8 #4e5173
+# Cursor colors
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
 
-color1 #F7768E
-color9 #F7768E
+# URL underline color when hovering with mouse
+url_color               #F5E0DC
 
-color2 #9ECE6A
-color10 #9ECE6A
+# Kitty window border colors
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
 
-color3 #E0AF68
-color11 #E0AF68
+# OS Window titlebar colors
+wayland_titlebar_color system
+macos_titlebar_color system
 
-color4 #7AA2F7
-color12 #7AA2F7
+# Tab bar colors
+active_tab_foreground   #11111B
+active_tab_background   #CBA6F7
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #181825
+tab_bar_background      #11111B
 
-color5 #9a7ecc
-color13 #9a7ecc
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #B4BEFE
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
 
-color6 #4abaaf
-color14 #4abaaf
+# The 16 terminal colors
 
-color7 #acb0d0
-color15 #acb0d0
+# black
+color0 #45475A
+color8 #585B70
+
+# red
+color1 #F38BA8
+color9 #F38BA8
+
+# green
+color2  #A6E3A1
+color10 #A6E3A1
+
+# yellow
+color3  #F9E2AF
+color11 #F9E2AF
+
+# blue
+color4  #89B4FA
+color12 #89B4FA
+
+# magenta
+color5  #F5C2E7
+color13 #F5C2E7
+
+# cyan
+color6  #94E2D5
+color14 #94E2D5
+
+# white
+color7  #BAC2DE
+color15 #A6ADC8
 
 #: The color table {{{
 
