--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Dank Mono Regular Nerd Font Mono
-# bold_font        auto
-italic_font      Dank Mono Italic Nerd Font Mono
-# bold_italic_font auto
+font_family      BerkeleyMono Nerd Font Regular
+bold_font        BerkeleyMono Nerd Font Bold
+italic_font      BerkeleyMono Nerd Font Italic
+bold_italic_font BerkeleyMono Nerd Font Bold
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -24,7 +24,7 @@ italic_font      Dank Mono Italic Nerd Font Mono
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 13.0
 
 #: Font size (in pts)
 
