--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2236,3 +2236,7 @@ color15 #A6ADC8
 #: }}}
 
 #: }}}
+
+# Fig Kitty Integration: Enabled
+watcher ${HOME}/.fig/tools/kitty-integration.py
+# End of Fig Kitty Integration
