feat: better tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,22 +1,57 @@
-set -ga terminal-overrides ",xterm-256color*:Tc"
-set -s escape-time 0
-set-option -g default-shell /bin/zsh
+set -sg escape-time 0
 
 unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-set -g status-style 'bg=#333333 fg=#5eacd3'
+unbind C-a
+set -g prefix C-a
 
-bind r source-file ~/.tmux.conf
-set -g base-index 1
+bind-key C-a last-window
 
-set-window-option -g mode-keys vi
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+unbind |
+bind | split-window -h
+bind '\' split-window -h
+bind 'C-\' split-window -h
+unbind -
+bind - split-window -v
+unbind _
+bind _ split-window -v
 
-# vim-like pane switching
-bind -r ^ last-window
+bind-key & kill-window
+
+set -g mode-keys vi
+set -g status-keys vi
+
+bind -r C-k resize-pane -U 10
+bind -r C-j resize-pane -D 10
+bind -r C-h resize-pane -L 10
+bind -r C-l resize-pane -R 10
+
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
+bind -r r source-file ~/.tmux.conf
+
+set -g default-terminal "xterm-256color"
+set -g clock-mode-style 12
+setw -g clock-mode-colour "#f5c2e7"
+set -g base-index 1
+setw -g pane-base-index 1
+
+set -g pane-border-style "fg=#1e1e2e"
+set -g pane-active-border-style "fg=#1e1e2e"
+
+set -g mode-style "bg=black"
+
+set -g status-style "fg=#cdd6f4"
+set -g status-bg default
+set -g status-position top
+set -g status-interval 1
+set -g status-left ""
+
+set -g status-right "%a, %b %-e, %Y, %-l:%M:%S%p %Z%0z"
+set -g status-right-style "fg=#f5c2e7"
+
+set -g message-style "fg=#f38ba8"
+
+set -g status on
