feat: migrate to lua and lsp-zero

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      BerkeleyMono Nerd Font Regular
-bold_font        BerkeleyMono Nerd Font Bold
-italic_font      BerkeleyMono Nerd Font Italic
-bold_italic_font BerkeleyMono Nerd Font Bold
+font_family      BerkeleyMono Nerd Font Mono Regular
+bold_font        BerkeleyMono Nerd Font Mono Bold
+italic_font      BerkeleyMono Nerd Font Mono Italic
+bold_italic_font BerkeleyMono Nerd Font Mono Bold
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
