--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -12,9 +12,9 @@
   },
   "base_keymap": "VSCode",
   "vim_mode": true,
-  "theme": "Ayu Dark",
-  "buffer_font_size": 14,
-  "buffer_font_family": "Berkeley Mono",
+  "theme": "Catppuccin Mocha",
+  "buffer_font_size": 18,
+  "buffer_font_family": "Iosevka",
   "project_panel": {
     "dock": "right"
   },
