--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -14,7 +14,7 @@
   "vim_mode": true,
   "theme": "Catppuccin Mocha",
   "buffer_font_size": 18,
-  "buffer_font_family": "Iosevka",
+  "buffer_font_family": "Iosevka Nerd Font Mono",
   "project_panel": {
     "dock": "right"
   },
@@ -37,12 +37,6 @@
     },
     "HEEX": {
       "language_servers": ["lexical", "!elixir-ls"]
-    }
-  },
-  "lsp": {
-    "lexical": {
-      "path": "/Users/kramer/oss/lexical/_build/dev/package/lexical/bin/start_lexical.sh",
-      "arguments": []
     }
   }
 }
